CF7 - responsive alignment issue fixing

--- a/src/blocks/cf7-designer/style.scss
+++ b/src/blocks/cf7-designer/style.scss
@@ -226,7 +226,7 @@
 		-webkit-justify-content: center;
 		-moz-box-pack: center;
 		justify-content: center;
-		width: 100%;
+		width: 100% !important;
 	}
 }
 
@@ -253,7 +253,7 @@
 		-webkit-justify-content: center;
 		-moz-box-pack: center;
 		justify-content: center;
-		width: 100%;
+		width: 100% !important;
 	}
 }
 
@@ -280,6 +280,6 @@
 		-webkit-justify-content: center;
 		-moz-box-pack: center;
 		justify-content: center;
-		width: 100%;
+		width: 100% !important;
 	}
 }
